# SoftSeg

./: README.md  pyproject.toml
src/SoftSeg/: .SoftAssigner.py.swp  CellTypeAssigner.py  SoftAssigner.py  SupportFuncs.py  codedump.py  test.py
