[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SoftSeg"
version = "0.0.2"
authors = [
  { name="Cecilia Cisar", email="ccisar@ucsc.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anndata",
    "opencv-python<=4.10",
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas",
    "pathspec>=0.10.1",
    "psutil", # is this one really needed?
    "scanpy",
    "scikit-image"
]
