[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SoftSeg"
version = "0.1.1"
authors = [
  { name="Cecilia Cisar", email="ccisar@ucsc.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anndata",
    "tqdm",
    "opencv-python",
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas",
    "parse",
    "pathspec>=0.10.1",
    "scanpy",
    "scikit-image"
]
